--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -1,40 +1,98 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <title>Formulário de cadastro de notícia</title>
-</head>
+<!DOCTYPE HTML>
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8">
 
-<body>
-    <h1>Adicionar notícia</h1>
+		<title>Portal de notícias</title>
+		
+		<!-- JQuery -->
+		<script src="js/jquery-2.2.1.js"></script>
 
-    <%if(erros){%>
-        <ul>
-        <%for(var i=0; i< erros.length; i++){%>
-            <li><%= erros[i].msg %></li> 
-        <%}%>
-        </ul>
-    <%}%>
+		<!-- bootstrap - link cdn -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	
+		<!-- incluindo css -->
+		<link href="css/style.css" rel="stylesheet">
 
-    <form action="/noticias/salvar" method="post">
-        <label>Título</label>
-        <input type="text" id="titulo" name="titulo" placeholder="Título da notícia" value='<%=noticia.titulo%>'>
-        <br />
-        <label>Resumo</label>
-        <input type='text' id="resumo" name="resumo" rows="5" placeholder="Resumo da notícia" value='<%=noticia.resumo%>'></input>
-        <br />
-        <label>Autor</label>
-        <input type='text' id="autor" name="autor" rows="5" placeholder="Autor da notícia" value='<%=noticia.autor%>'></input>
-        <br />
-        <label>Data</label>
-        <input type="date" id="data_noticia" name="data_noticia" rows="5"  placeholder="Data da notícia" value='noticia.data_noticia'></input>
-        <br />
-        <label>Notícia</label>
-        
-        <textarea id="noticia" name="noticia" rows="5" cols="30"><%=noticia.noticia%></textarea>
-        <br />
-        <input type="submit" value="Criar nova notícia">
-    </form>
-</body>
+		<!-- favicon -->
+		<link rel="shortcut icon" href="images/favicon.ico" />
+	</head>
 
+	<body>
+
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					
+					<img src="images/logo.png" />
+				</div>
+
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="index.html">HOME</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+
+	    <div class="container">
+			<%if(erros.length > 0){%>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="alert alert-danger">
+							<strong>Atenção!</strong>
+							<ul>
+								<%for(var i=0; i<erros.length; i++){ %>
+									<li><%= erros[i].msg %></li>
+								<%}%>
+							</ul>
+						</div>
+					</div>
+				</div>
+			<%}%>
+	    	<div class="row">
+	    		<div class="col-md-12">
+	    			<form action='/noticias/salvar' method='post'>
+						<div class="form-group">
+							<label for="titulo">Título:</label>
+							<input type="text" class="form-control" id="titulo" name="titulo">
+						</div>
+
+						<div class="form-group">
+							<label for="pwd">Resumo:</label>
+							<input type="text" class="form-control" id="resumo" name="resumo">
+						</div>
+						
+						<div class="form-group">
+							<label for="pwd">Autor:</label>
+							<input type="text" class="form-control" id="autor" name="autor">
+						</div>
+
+						<div class="form-group">
+							<label for="pwd">Data:</label>
+							<input type="date" class="form-control" id="data_noticia" name="data_noticia">
+						</div>
+
+						<div class="form-group">
+							<label for="pwd">Notícia:</label>
+							<textarea class="form-control" id="noticia" name="noticia"></textarea>
+						</div>
+
+
+						<button type="submit" class="btn btn-default">Cadastrar</button>
+						</form>
+		    	</div>
+	    	</div>
+	    </div>
+	
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	
+	</body>
 </html>
